Github login button - fix spacing

--- a/public/less/styles.less
+++ b/public/less/styles.less
@@ -24,6 +24,7 @@ body {
   text-decoration: none;
   padding: 5px 15px;
   color: #000;
+  padding-right: 32px;
   border-radius: 3px;
   background: #fff url(https://image.flaticon.com/icons/png/512/25/25231.png) top right no-repeat;
   background-size: contain;
